No check certificate upon version update and display errors if any.